--- a/project/package.json
+++ b/project/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "some deploy command"
   },
   "dependencies": {
     "framer-motion": "^11.0.3",
